@@ -33,5 +33,13 @@ USER fitnest
 
 EXPOSE 8080
 
-# Using simple exec form. JVM will pick up JAVA_TOOL_OPTIONS from environment.
-ENTRYPOINT ["sh", "-c", "java ${JAVA_OPTS:-'-XX:+UseContainerSupport -XX:MaxRAMPercentage=75.0 -XX:+UseZGC -XX:+ZGenerational'} -jar app.jar"]
+ENTRYPOINT [ \
+  "java", \
+  "-XX:MaxRAMPercentage=70", \
+  "-XX:InitialRAMPercentage=50", \
+  "-XX:+UseZGC", \
+  "-Xss256k", \
+  "-XX:+ExitOnOutOfMemoryError", \
+  "-XX:HeapDumpPath=/tmp/heapdump.hprof", \
+  "-jar", "app.jar" \
+]
